Kubernetes/frontend/entreprise-management-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: entreprise-admin-svc
  namespace: entreprise-admin
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: entreprise-admin
