Kubernetes/frontend/entreprise-management-ui/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: entreprise-admin-ingress
    namespace: entreprise-admin
    annotations:
      ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - entreprise-admin.startfleet.ovh
    secretName: entreprise-admin-cert-tls
  rules:
  - host: entreprise-admin.startfleet.ovh
    http:
      paths:
      - backend:
          serviceName: entreprise-admin-svc
          servicePort: 80
